force-app/main/default/objects/Time_Card__c/Time_Card__c.object-meta.xml
<CustomObject>
    <label>Time Card</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Time Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>