force-app/main/default/objects/Time_Card__c/fields/Approved_Hours__c.field-meta.xml
<CustomField>
    <fullName>Approved_Hours__c</fullName>
    <label>Approved Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>