force-app/main/default/objects/Time_Card__c/fields/Current_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Pay_Period__c</fullName>
    <formula>CEILING(((TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1) +
MOD(DATE(YEAR(TODAY() ), 1, 1) - DATE(1900, 1, 7), 7)) / 7) = Week_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Pay Period</label>
    <type>Checkbox</type>
</CustomField>