force-app/main/default/objects/Time_Card__c/fields/Incomplete_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Shifts__c</fullName>
    <label>Incomplete Shifts</label>
    <summaryFilterItems>
        <field>Shift__c.Incomplete_Entries__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Shift__c.Time_Card__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>