force-app/main/default/objects/Time_Card__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Employee__r.Manager_Name__c</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>