force-app/main/default/objects/Time_Card__c/fields/Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Pay_Period__c</fullName>
    <formula>Text(Time_Card_Start_Date__c) &amp; &quot; - &quot; &amp; Text(Time_Card_End_Date__c)</formula>
    <label>Pay Period</label>
    <type>Text</type>
</CustomField>