force-app/main/default/objects/Time_Card__c/fields/Previous_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>Previous_Pay_Period__c</fullName>
    <formula>CEILING(((TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1) +
MOD(DATE(YEAR(TODAY() ), 1, 1) - DATE(1900, 1, 7), 7)) / 7) - 1 = Week_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Pay Period</label>
    <type>Checkbox</type>
</CustomField>