force-app/main/default/objects/Time_Card__c/fields/Time_Card_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_End_Date__c</fullName>
    <label>Time Card End Date</label>
    <type>Date</type>
</CustomField>