force-app/main/default/objects/Time_Card__c/fields/Time_Card_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Start_Date__c</fullName>
    <label>Time Card Start Date</label>
    <type>Date</type>
</CustomField>