force-app/main/default/objects/Time_Card__c/fields/Total_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Hours__c</fullName>
    <label>Total Work Hours</label>
    <summarizedField>Shift__c.Total_Work_Hours__c</summarizedField>
    <summaryForeignKey>Shift__c.Time_Card__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>