force-app/main/default/objects/Time_Card__c/validationRules/Do_not_change_Start_And_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_change_Start_And_End_Date</fullName>
    <active>true</active>
    <description>Once set, Start and End date fields can not be changed.</description>
    <errorConditionFormula>AND(!isNew(), OR(ISCHANGED(Time_Card_Start_Date__c), ISCHANGED( Time_Card_End_Date__c)))</errorConditionFormula>
    <errorMessage>Start Date and End Date can not be changed.</errorMessage>
</ValidationRule>