force-app/main/default/objects/Time_Card__c/validationRules/Nobody_should_be_able_to_edit_their_own.validationRule-meta.xml
<ValidationRule>
    <fullName>Nobody_should_be_able_to_edit_their_own</fullName>
    <active>false</active>
    <description>Nobody should be able to edit their own time cards where modified by user = Employee__c user</description>
    <errorConditionFormula>AND(!isNew(), LastModifiedById =  Employee__c)</errorConditionFormula>
    <errorMessage>You are not able to edit your Time Card</errorMessage>
</ValidationRule>