force-app/main/default/objects/Time_Card__c/validationRules/Start_and_End_Date_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Date_Validation_Rule</fullName>
    <active>true</active>
    <description>The Time Card Start Date must be a Sunday
The Time Card End Date must be a Saturday
The start and end date must be within the same week.</description>
    <errorConditionFormula>OR( 
WEEKDAY(Time_Card_Start_Date__c) != 1,  
WEEKDAY( Time_Card_End_Date__c ) != 7,
(Time_Card_End_Date__c - Time_Card_Start_Date__c) != 6
)</errorConditionFormula>
    <errorMessage>The Time Card Start Date must be a Sunday
The Time Card End Date must be a Saturday
The start and end date must be within the same week.</errorMessage>
</ValidationRule>