force-app/main/default/objects/Time_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Current_Pay_Period__c</columns>
    <columns>Time_Card_Start_Date__c</columns>
    <columns>Time_Card_End_Date__c</columns>
    <columns>Incomplete_Shifts__c</columns>
    <columns>Total_Work_Hours__c</columns>
    <columns>Manager__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>