force-app/main/default/objects/Time_Card__c/listViews/Previous_Pay_Period.listView-meta.xml
<ListView>
    <fullName>Previous_Pay_Period</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Manager__c</columns>
    <columns>Pay_Period__c</columns>
    <columns>Incomplete_Shifts__c</columns>
    <columns>Total_Work_Hours__c</columns>
    <columns>Division__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Previous_Pay_Period__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Previous Pay Period</label>
</ListView>