force-app/main/default/objects/Time_Card__c/listViews/Time_Cards_Time_Card.listView-meta.xml
<ListView>
    <fullName>Time_Cards_Time_Card</fullName>
    <filterScope>Queue</filterScope>
    <label>Time Cards</label>
    <queue>Time_Cards</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>